parser/tests/cases/snapshots/cases__parse_ast__stmt_revert.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_revert), functions::parse_stmt, \"revert\")"

---
Node(
  kind: Revert,
  span: Span(
    start: 0,
    end: 6,
  ),
)
