parser/tests/cases/snapshots/cases__parse_ast__type_generic_int.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(type_generic_int), types::parse_type_desc, \"foo<1, 2>\")"

---
Node(
  kind: Generic(
    base: Node(
      kind: "foo",
      span: Span(
        start: 0,
        end: 3,
      ),
    ),
    args: Node(
      kind: [
        Int(Node(
          kind: 1,
          span: Span(
            start: 4,
            end: 5,
          ),
        )),
        Int(Node(
          kind: 2,
          span: Span(
            start: 7,
            end: 8,
          ),
        )),
      ],
      span: Span(
        start: 3,
        end: 9,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 9,
  ),
)
