parser/tests/cases/snapshots/cases__parse_ast__type_map2.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(type_map2), types::parse_type_desc,\n           \"map<address, map<u8, u256>>\")"

---
Node(
  kind: Map(
    from: Node(
      kind: Base(
        base: "address",
      ),
      span: Span(
        start: 4,
        end: 11,
      ),
    ),
    to: Node(
      kind: Map(
        from: Node(
          kind: Base(
            base: "u8",
          ),
          span: Span(
            start: 17,
            end: 19,
          ),
        ),
        to: Node(
          kind: Base(
            base: "u256",
          ),
          span: Span(
            start: 21,
            end: 25,
          ),
        ),
      ),
      span: Span(
        start: 13,
        end: 26,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 27,
  ),
)
